[package]
name = "value-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.2"
futures-util = "0.3.30"
lru = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
sqlx = { version = "0.7.3", default-features = false, features = ["macros", "migrate"], optional=true}
uuid = { version = "1.7.0", features = ["v7", "serde"] }


[dev-dependencies]
serde_test = "1.0.176"

[features]
default=["db_sqlite"]
db_sqlx = ["sqlx"]
db_sqlite = ["db_sqlx", "sqlx/sqlite"]
